Added Delete function

--- a/stocks/quotes/templates/home.html
+++ b/stocks/quotes/templates/home.html
@@ -15,7 +15,7 @@
     <p class="card-text"> Price: ${{ api.latestPrice }}<br/>
         Previous Close: ${{ api.previousClose }}<br/>
         Market Cap: ${{ api.marketCap }}<br/>
-        YTD Change: {{ api.ytdChange }}<br/>
+        YTD Change: {{ api.ytdChange }}%<br/>
         52WK High: ${{ api.week52High }}<br/>
         52WK Low: ${{ api.week52Low }}<br/></p>
 </div>
