--- a/stocks/quotes/templates/add_stock.html
+++ b/stocks/quotes/templates/add_stock.html
@@ -11,10 +11,12 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">NASDAQ Symbol:</span>
             </div>
-            <label class="col-form-label" for="inputDefault"></label>
-            <input class="form-control" type="search" placeholder="Add To Portfolio" id="inputDefault" aria-label="Search" name="ticker">
+                <label class="col-form-label" for="inputDefault"></label>
+                <input class="form-control-default" type="text" placeholder="Add To Portfolio" id="inputDefault" aria-label="Search" name="ticker">
             <div class="input-group-append">
-            <span class="input-group-append"><button class="btn btn-outline-info my-2 my-sm-0" type="submit" >Add Stock</button></span>
+                <span class="input-group-text">
+                    <button class="btn btn-info btn-sm" type="submit" >Add Stock</button>
+                </span>
             </div>
         </div>
     </div>
