--- a/stocks/quotes/static/css/style.css
+++ b/stocks/quotes/static/css/style.css
@@ -91,20 +91,20 @@ td {
 }
 
 /* Sticky footer */
-.footer {
-  background-color: #fdf6e3;
-  color: slategray;
-}
 #email {
   height: 25px;
   width: 25px;
   padding-right: 2px;
 }
-#contact {
+.contact {
   overflow: hidden;
   white-space: nowrap;
 }
 #border {
   margin-left: 1em;
   margin-right: 1em;
+}
+.footer {
+  background-color: #272b30;
+  color: #272b30;
 }
