--- a/stocks/quotes/templates/about.html
+++ b/stocks/quotes/templates/about.html
@@ -97,7 +97,7 @@
             </div>
             <div id="border" class="card border-info mb-3 col-sm-6">
                 <div class="card-header">
-                    <h4 class="text-success">My Skills:</h4>
+                    <h4 class="text-info">My Skills:</h4>
                     <ul class="nav nav-tabs">
                         <li class="nav-item">
                             <a class="nav-link" data-toggle="tab" href="#language">Lang.</a>
@@ -139,44 +139,41 @@
         </div>
     </div>
 
-                <div class="card-body">
-                    <h4 class="card-title text-success">My Repositories on Github:</h4>
-                
-                    <div class="form-group">
-                        
-                        <div class="form-group">
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">GitHub Username:</span>
-                                </div>
-                                <input type="text" class="form-control-default" for="inputDefault" aria-label="kevinfrohlich" placeholder="kevinfrohlich">
-                                <div class="input-group-append">
-                                    <span class="input-group-text"><button class="btn btn-outline-info btn-sm"  placeholder="kevinfrohlich" onclick="loadRepos()">Load Repos</button></span>
-                                </div>
-                            </div>
+    <div class="card-body">
+        <h4 class="card-title text-info">My Repositories on Github:</h4>
+            <div class="form-group">
+                <div class="form-group">
+                    <div class="input-group mb-3">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">GitHub Username:</span>
+                        </div>
+                            <input type="text" class="form-control-default" for="inputDefault" aria-label="kevinfrohlich" placeholder="kevinfrohlich">
+                        <div class="input-group-append">
+                            <span class="input-group-text"><button class="btn btn-outline-info btn-sm"  placeholder="kevinfrohlich" onclick="loadRepos()">Load Repos</button></span>
                         </div>
                     </div>
-                    <ul id="repos">
-                        <li>
-                            <a href="{repo.html_url}"></a>
-                </li>
-                </ul>
+                </div>
             </div>
+                <ul id="repos">
+                    <li>
+                        <a href="{repo.html_url}"></a>
+                    </li>
+                </ul>
+    </div>
+</div>
 
-        </div>
-
-    <footer class="container col-sm-12">
-        <button type="button" class="btn btn-info btn-lg btn-block">
-            <div class="container" id="contact">
-                <span class="text-item">Contact: (530) 604 9389 - Redding, CA.</span>
-                <span><a class="nav-link" style="text-align: center" href="mailto:kevinfrohlich@gmail.com"><img
+<footer class="container col-sm-12">
+    <button type="button" class="btn btn-info btn-lg btn-block">
+        <div class="container" id="contact">
+            <span class="text-item">Contact: (530) 604 9389 - Redding, CA.</span>
+            <span><a class="nav-link" style="text-align: center" href="mailto:kevinfrohlich@gmail.com"><img
                             src="https://static1.squarespace.com/static/58f705e5893fc0eeb1eaf706/t/5dd4d9026bae7d14c44542de/1574230275720/email.png?format=750w"
                             id="email">
                         kevinfrohlich@gmail.com</a></span>
-            </div>
-        </button>
+        </div>
+    </button>
     
-    </footer>
+</footer>
     </div>
 
     
